tkg_tmc_to/cluster-1/sample-app/helloworld-ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: helloworld
  labels:
    app: helloworld
spec:
  rules:
    - host: helloworld.cluster-1.poc.yogendra.me
      http:
        paths:
          - backend:
              serviceName: helloworld
              servicePort: http
